HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DispatchDiagnostics/Source/Main.uv
//! Rejected structured-parallelism specimen for dispatch diagnostics ownership.

public procedure dispatchDiagnosticsReference() -> () {
    dispatch index in 0usize..4usize {
        index
    }
}
